2010-01-25  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, trivial baseline updates.

        -webkit-gradient slows down scrolling when page has horizontal scrollbar
        https://bugs.webkit.org/show_bug.cgi?id=19650

        Update pixel baselines. They changed slightly after http://trac.webkit.org/changeset/53318/
        landed.

        * platform/mac/fast/gradients/border-image-gradient-expected.checksum:
        * platform/mac/fast/gradients/border-image-gradient-expected.png:
        * platform/mac/fast/gradients/border-image-gradient-sides-and-corners-expected.checksum:
        * platform/mac/fast/gradients/border-image-gradient-sides-and-corners-expected.png:
        * platform/mac/fast/gradients/simple-gradients-expected.checksum:
        * platform/mac/fast/gradients/simple-gradients-expected.png:

2010-01-25  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Geoffrey Garen.

        https://bugs.webkit.org/show_bug.cgi?id=34076
        An image remains accessible via form.property syntax after being removed from document.

        * fast/forms/removed-image-as-property-expected.txt: Added.
        * fast/forms/removed-image-as-property.html: Added.
        * fast/forms/reparented-image-as-property-expected.txt: Added.
        * fast/forms/reparented-image-as-property.html: Added.

2010-01-25  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Add new inspector test added in r53807 to skip
        list on qt platform.

        * platform/qt/Skipped:

2010-01-25  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Timothy Hatcher.

        Test that Web Inspector doesn't change methods declared by the inspected
        page.
        https://bugs.webkit.org/show_bug.cgi?id=34089

        * inspector/inspected-objects-not-overriden-expected.txt: Added.
        * inspector/inspected-objects-not-overriden.html: Added.

2010-01-25  Philippe Normand  <pnormand@igalia.com>

        Rubber-stamped by Xan Lopez.
