@@ -7,11 +7,15 @@
         Test for <i><a href="http://bugs.webkit.org/show_bug.cgi?id=12364">http://bugs.webkit.org/show_bug.cgi?id=12364</a>
         REGRESSSION (NativeListBox): Selected option's background is not clipped to the list box</i>.
     </p>
-    <select size="4" style="height: 58px; border: 3px solid blue; padding: 3px;">
+    <select size="4" style="border: 3px solid blue; padding: 3px;" id="sel">
         <option>one</option>
         <option>two</option>
         <option>three</option>
         <option style="background-color: purple;">four</option>
     </select>
-</body>
+<script>
+var sel = document.getElementById('sel');
+var itemHeight = (sel.offsetHeight - 11) / sel.size;
+sel.style.height = (11 + itemHeight * 3 + 5) + 'px';
+</script></body>
 </html>
